[package]
name = "findfile"
version = "0.2.3"
edition = "2021"
authors = ["Sam Westerman", "sam <at-sign> sampersand.me"]
description = "An ergonomic way to search for files"
repository = "https://github.com/sampersand/FindFile"
license = "MIT OR Apache-2.0"
keywords = ["find", "file", "grep", "tool", "search"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "ff"
path = "src/main.rs"

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
fancy-regex = "0.11"
os_str_bytes = "6.5"
home = "0.5.5"
clap = { version = "4.3.4", features = ["derive", "wrap_help"] }
num_cpus = "1.15"
